--- a/frontend/auth/index.html
+++ b/frontend/auth/index.html
@@ -5,20 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="XXXXX" />
         <title>NeuroMap</title>
-        <link
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-            rel="stylesheet"
-            />
-            <!-- Google Fonts -->
-            <link
-            href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap"
-            rel="stylesheet"
-            />
-            <!-- MDB -->
-            <link
-            href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css"
-            rel="stylesheet"
-            />
+        <!-- Font Awesome -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap" rel="stylesheet"/>
+        <!-- MDB -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css" rel="stylesheet"/>
         <link rel="stylesheet" href="./../_ext/css/style.css" type="text/css"></link>
     </head>
     <body>
@@ -51,9 +43,8 @@
           </section>
     </body>
     <footer>
-        <script
-        type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"
-        ></script>
+        <!-- MDB -->
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"></script>
+        <script type="text/javascript" src="auth.js"></script>
     </footer>
 </html>
