ajuste altura do esqueci minha senha

--- a/frontend/auth/index.html
+++ b/frontend/auth/index.html
@@ -27,11 +27,13 @@
                         <div class="input-group mb-5">
                             <input type="email" class="form-control" name="email" placeholder="Usuário" id="email">
                         </div>
-                        <div class="input-group mb-5">
+                        <div class="input-group">
                             <input type="password" class="form-control" id="senha" placeholder="Senha">
                         </div>
           
-                        <p class="small mb-5 pb-lg-2"><a class="font-primary" href="#!">Esqueci minha senha</a></p>
+                        <p class="text-left small mb-5 w-100">
+                            <a class="font-primary" href="#!">Esqueci minha senha</a>
+                        </p>
           
                         <button class="btn btn-primary" id="entrar" type="button">Entrar</button>
                       </div>          
