--- a/frontend/red-flags/index.html
+++ b/frontend/red-flags/index.html
@@ -32,6 +32,6 @@
     <footer>
         <!-- MDB -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"></script>
-        <script type="text/javascript" src="auth.js"></script>
+        <script type="text/javascript" src="../services/red_flags_service.js"></script>
     </footer>
 </html>
