--- a/frontend/red-flags/index.html
+++ b/frontend/red-flags/index.html
@@ -14,20 +14,23 @@
         <link rel="stylesheet" href="./../_ext/css/style.css" type="text/css"></link>
     </head>
     <body>
-        <section class="vh-100 gradient-custom" id="auth">
-            <div class="container vh-100 mr-0">
-              <div class="row d-flex justify-content-end align-items-center h-100">
-                <div class="col-12 col-md-10 col-lg-8 col-xl-10">
-                  <div class="card vh-95 " style="border-radius: 1.5rem;">
-                    <div class="card-body p-5 text-left">
-                        <h2 class="fw-bold text-uppercase font-primary">Red Flags</h2>
-                        <p>Esses alunos devem ser encaminhados a um profissional especializado!</p>
+        <section class="vh-100" id="auth">
+            <div class="container vh-100 vw-100 mr-0">
+                <div class="row d-flex justify-content-center align-items-center h-100">
+                    <div class="col-2 col-md-2 col-lg-4 col-xl-2">
+                        <img width="100%" src="../_ext/img/logo.png">
                     </div>
-                  </div>
+                    <div class="col-10 col-md-10 col-lg-8 col-xl-10">
+                        <div class="card vh-95 " style="border-radius: 1.5rem;">
+                            <div class="card-body p-5 text-left">
+                                <h2 class="fw-bold text-uppercase font-primary">Red Flags</h2>
+                                <p>Esses alunos devem ser encaminhados a um profissional especializado!</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </section>
+        </section>
     </body>
     <footer>
         <!-- MDB -->
