--- a/frontend/students/index.html
+++ b/frontend/students/index.html
@@ -14,10 +14,13 @@
         <link rel="stylesheet" href="./../_ext/css/style.css" type="text/css"></link>
     </head>
     <body>
-        <section class="vh-100 gradient-custom" id="auth">
-            <div class="container vh-100 mr-0">
-              <div class="row d-flex justify-content-end align-items-center h-100">
-                <div class="col-12 col-md-10 col-lg-8 col-xl-10">
+        <section class="vh-100" id="auth">
+            <div class="container vh-100 vw-100 m-0">
+              <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-2 col-md-2 col-lg-4 col-xl-2">
+                    <img width="100%" src="../_ext/img/logo.png">
+                </div>
+                <div class="col-10 col-md-10 col-lg-8 col-xl-10">
                   <div class="card vh-95 " style="border-radius: 1.5rem;">
                     <div class="card-body p-5 text-left">
                         <h2 class="fw-bold text-uppercase font-primary">Alunos</h2>
