--- a/frontend/school/red-flags/index.html
+++ b/frontend/school/red-flags/index.html
@@ -11,14 +11,24 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap" rel="stylesheet"/>
         <!-- MDB -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css" rel="stylesheet"/>
-        <link rel="stylesheet" href="./../_ext/css/style.css" type="text/css"></link>
+        <link rel="stylesheet" href="./../../_ext/css/style.css" type="text/css"></link>
     </head>
     <body>
         <section class="vh-100" id="auth">
             <div class="container vh-100 vw-100 mr-0">
                 <div class="row d-flex justify-content-center align-items-center h-100">
-                    <div class="col-2 col-md-2 col-lg-4 col-xl-2">
-                        <img width="100%" src="../_ext/img/logo.png">
+                    <div class="col-2 col-md-2 col-lg-4 col-xl-2 text-center">
+                        <img width="100%" src="./../../_ext/img/logo.png">
+                        <img class="m-2" width="70%" src="./../../_ext/img/user.png">
+                        <p class="text-white mb-2">Coordenação</p>
+                        <ul>
+                          <li>
+                            <a href="./../students/" class="text-white">Alunos</a>
+                          </li>
+                          <li>
+                            <a href="./../red-flags/" class="text-white">Red Flags</a>
+                          </li>
+                        </ul>
                     </div>
                     <div class="col-10 col-md-10 col-lg-8 col-xl-10">
                         <div class="card vh-95 " style="border-radius: 1.5rem;">
@@ -35,6 +45,6 @@
     <footer>
         <!-- MDB -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"></script>
-        <script type="text/javascript" src="../services/red_flags_service.js"></script>
+        <script type="text/javascript" src="../../services/red_flags_service.js"></script>
     </footer>
 </html>
