logo na tela de login

--- a/frontend/auth/index.html
+++ b/frontend/auth/index.html
@@ -16,13 +16,16 @@
     <body>
         <section class="vh-100 gradient-custom" id="auth">
             <div class="container h-100">
-              <div class="row d-flex justify-content-end align-items-center h-100">
-                <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+              <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-8 col-md-9 col-lg-8 col-xl-7 text-center">
+                  <img width="70%" src="./../_ext/img/neuromap-logo.png">
+                </div>
+                <div class="col-4 col-md-3 col-lg-4 col-xl-5">
                   <div class="card" style="border-radius: 1.5rem;">
                     <div class="card-body p-5 text-center">
                       <div class="mt-md-5 pb-5">
           
-                        <h2 class="fw-bold mb-5 text-uppercase font-secondary">Login</h2>
+                        <h2 class="fw-bold mb-5 text-uppercase font-secondary title">Login</h2>
           
                         <div class="input-group mb-5">
                             <input type="email" class="form-control" name="email" placeholder="Usuário" id="email">
