--- a/frontend/school/red-flags/index.html
+++ b/frontend/school/red-flags/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="XXXXX" />
+        <link rel="icon" class="js-site-favicon" type="image/png" href="../_ext/img/favicon.png">
         <title>Red Flags - NeuroMap</title>
         <!-- Font Awesome -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
