rename and use code assets

--- a/frontend/auth/index.html
+++ b/frontend/auth/index.html
@@ -3,22 +3,22 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" class="js-site-favicon" type="image/png" href="../_ext/img/favicon.png">
+        <link rel="icon" class="js-site-favicon" type="image/png" href="../assets/img/favicon.png">
         <title>Login - NeuroMap</title>
         <!-- Font Awesome -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
+        <link href="./../../assets/css/all.min.css" rel="stylesheet"/>
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap" rel="stylesheet"/>
         <!-- MDB -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css" rel="stylesheet"/>
-        <link rel="stylesheet" href="./../_ext/css/style.css" type="text/css"></link>
+        <link href="./../../assets/css/mdb.min.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="./../assets/css/style.css" type="text/css"></link>
     </head>
     <body>
         <section class="vh-100 gradient-custom" id="auth">
             <div class="container h-100">
               <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-8 col-md-9 col-lg-8 col-xl-7 text-center">
-                  <img width="70%" src="./../_ext/img/neuromap-logo.png">
+                  <img width="70%" src="./../assets/img/neuromap-logo.png">
                 </div>
                 <div class="col-4 col-md-3 col-lg-4 col-xl-5">
                   <div class="card" style="border-radius: 1.5rem;">
@@ -49,7 +49,7 @@
     </body>
     <footer>
         <!-- MDB -->
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"></script>
+        <script type="text/javascript" src="./../../assets/js/mdb.min.js"></script>
         <script type="text/javascript" src="auth.js"></script>
     </footer>
 </html>
