--- a/frontend/school/red-flags/index.html
+++ b/frontend/school/red-flags/index.html
@@ -3,23 +3,23 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" class="js-site-favicon" type="image/png" href="../_ext/img/favicon.png">
+        <link rel="icon" class="js-site-favicon" type="image/png" href="../assets/img/favicon.png">
         <title>Red Flags - NeuroMap</title>
         <!-- Font Awesome -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
+        <link href="./../../assets/css/all.min.css" rel="stylesheet"/>
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap" rel="stylesheet"/>
         <!-- MDB -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.css" rel="stylesheet"/>
-        <link rel="stylesheet" href="./../../_ext/css/style.css" type="text/css"></link>
+        <link href="./../../assets/css/mdb.min.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="./../../assets/css/style.css" type="text/css"></link>
     </head>
     <body>
         <section class="vh-100" id="auth">
             <div class="container vh-100 vw-100 mr-0">
                 <div class="row d-flex justify-content-center align-items-center h-100">
                     <div class="col-2 col-md-2 col-lg-4 col-xl-2 text-center">
-                        <img width="100%" src="./../../_ext/img/logo.png">
-                        <img class="m-2" width="70%" src="./../../_ext/img/user.png">
+                        <img width="100%" src="./../../assets/img/logo.png">
+                        <img class="m-2" width="70%" src="./../../assets/img/user.png">
                         <p class="text-white mb-2">Coordenação</p>
                         <ul>
                           <li>
@@ -44,7 +44,7 @@
     </body>
     <footer>
         <!-- MDB -->
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.2/mdb.min.js"></script>
+        <script type="text/javascript" src="./../../assets/js/mdb.min.js"></script>
         <script type="text/javascript" src="../../services/red_flags_service.js"></script>
     </footer>
 </html>
