--- a/frontend/students/index.html
+++ b/frontend/students/index.html
@@ -6,11 +6,11 @@
         <link rel="icon" class="js-site-favicon" type="image/png" href="../assets/img/favicon.png">
         <title>Alunos - NeuroMap</title>
         <!-- Font Awesome -->
-        <link href="./../../assets/css/all.min.css" rel="stylesheet"/>
+        <link href="./../../assets/css/fontawesome/all.min.css" rel="stylesheet"/>
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap" rel="stylesheet"/>
         <!-- MDB -->
-        <link href="./../../assets/css/mdb.min.css" rel="stylesheet"/>
+        <link href="./../../assets/css/bootstrap/mdb.min.css" rel="stylesheet"/>
         <link rel="stylesheet" href="./../assets/css/style.css" type="text/css"></link>
     </head>
     <body>
@@ -40,7 +40,7 @@
     </body>
     <footer>
         <!-- MDB -->
-        <script type="text/javascript" src="./../../assets/js/mdb.min.js"></script>
+        <script type="text/javascript" src="./../../assets/js/bootstrap/mdb.min.js"></script>
         <script type="text/javascript" src="../services/student_service.js"></script>
     </footer>
 </html>
