--- a/frontend/auth/index.html
+++ b/frontend/auth/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" class="js-site-favicon" type="image/png" href="../assets/img/favicon.png">
+        <link rel="icon" class="js-site-favicon" type="image/png" href="./../assets/img/favicon.png">
         <title>Login - NeuroMap</title>
         <!-- Font Awesome -->
-        <link href="./../../assets/css/fontawesome/all.min.css" rel="stylesheet"/>
+        <link href="./../assets/css/fontawesome/all.min.css" rel="stylesheet"/>
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap" rel="stylesheet"/>
         <!-- MDB -->
-        <link href="./../../assets/css/bootstrap/mdb.min.css" rel="stylesheet"/>
+        <link href="./../assets/css/bootstrap/mdb.min.css" rel="stylesheet"/>
         <link rel="stylesheet" href="./../assets/css/style.css" type="text/css"></link>
     </head>
     <body>
@@ -49,7 +49,7 @@
     </body>
     <footer>
         <!-- MDB -->
-        <script type="text/javascript" src="./../../assets/js/bootstrap/mdb.min.js"></script>
+        <script type="text/javascript" src="./../assets/js/bootstrap/mdb.min.js"></script>
         <script type="text/javascript" src="auth.js"></script>
     </footer>
 </html>
