--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,4 +7,7 @@
         <title>NeuroMap</title>
     </head>
     <body></body>
+    <footer>
+        <script type="text/javascript" src="index.js"></script>
+    </footer>
 </html>
