--- a/frontend/school/red-flags/index.html
+++ b/frontend/school/red-flags/index.html
@@ -43,6 +43,7 @@
         </section>
     </body>
     <footer>
+        <script type="text/javascript" src="./../../index.js"></script>
         <!-- MDB -->
         <script type="text/javascript" src="./../../assets/js/bootstrap/mdb.min.js"></script>
         <script type="text/javascript" src="../../services/red_flags_service.js"></script>
