--- a/frontend/students/index.html
+++ b/frontend/students/index.html
@@ -39,6 +39,7 @@
           </section>
     </body>
     <footer>
+        <script type="text/javascript" src="./../index.js"></script>
         <!-- MDB -->
         <script type="text/javascript" src="./../assets/js/bootstrap/mdb.min.js"></script>
         <script type="text/javascript" src="../services/student_service.js"></script>
