--- a/frontend/auth/index.html
+++ b/frontend/auth/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="./../assets/css/style.css" type="text/css"></link>
     </head>
     <body>
-        <section class="vh-100 gradient-custom" id="auth">
+        <section class="vh-100 gradient-custom">
             <div class="container h-100">
               <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-8 col-md-9 col-lg-8 col-xl-7 text-center">
