--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,37 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" class="js-site-favicon" type="image/png" href="./assets/img/favicon.png">
         <title>NeuroMap</title>
+        <!-- Font Awesome -->
+        <link href="assets/css/fontawesome/all.min.css" rel="stylesheet"/>
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700&display=swap" rel="stylesheet"/>
+        <!-- MDB -->
+        <link href="assets/css/bootstrap/mdb.min.css" rel="stylesheet"/>
+        <link rel="stylesheet" href="assets/css/style.css" type="text/css"></link>
     </head>
-    <body></body>
+    <body>
+        <section class="vh-100">
+            <div class="container vh-100 vw-100 mr-0">
+                <div class="row d-flex justify-content-center align-items-center h-100">
+                    <div class="col-2 col-md-2 col-lg-4 col-xl-2 text-center">
+                        <img width="100%" src="assets/img/logo.png">
+                        <img class="m-2" width="70%" src="assets/img/user.png">
+                        <p class="text-white mb-2">Coordenação</p>
+                    </div>
+                    <div class="col-10 col-md-10 col-lg-8 col-xl-10">
+                        <div class="card vh-95 " style="border-radius: 1.5rem;">
+                            <div class="card-body p-5 text-left">
+                                <iframe width="800" height="500" src="https://app.powerbi.com/view?r=eyJrIjoiMjFlN2RlNDctNDcxOS00MGMxLWIyZGMtZTViMWQ3OGY3MGY3IiwidCI6Ijk5ZjYxYThhLTRhOTktNDBhNC1iMWVjLWVhMjgwZWVhZTI1NSJ9" frameborder="0" allowFullScreen="true"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </body>
     <footer>
         <script type="text/javascript" src="index.js"></script>
+        <script type="text/javascript" src="assets/js/bootstrap/mdb.min.js"></script>
+        <script type="text/javascript" src="services/red_flags_service.js"></script>
     </footer>
 </html>
