--- a/frontend/school/red-flags/index.html
+++ b/frontend/school/red-flags/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="./../../assets/css/style.css" type="text/css"></link>
     </head>
     <body>
-        <section class="vh-100" id="auth">
+        <section class="vh-100">
             <div class="container vh-100 vw-100 mr-0">
                 <div class="row d-flex justify-content-center align-items-center h-100">
                     <div class="col-2 col-md-2 col-lg-4 col-xl-2 text-center">
