--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,9 +18,17 @@
             <div class="container vh-100 vw-100 mr-0">
                 <div class="row d-flex justify-content-center align-items-center h-100">
                     <div class="col-2 col-md-2 col-lg-4 col-xl-2 text-center">
-                        <img width="100%" src="assets/img/logo.png">
+                        <a href="./"><img width="100%" src="assets/img/logo.png"></a>
                         <img class="m-2" width="70%" src="assets/img/user.png">
                         <p class="text-white mb-2">Coordenação</p>
+                        <ul>
+                          <li>
+                            <a href="./school/students/" class="text-white">Alunos</a>
+                          </li>
+                          <li>
+                            <a href="./school/red-flags/" class="text-white">Red Flags</a>
+                          </li>
+                        </ul>
                     </div>
                     <div class="col-10 col-md-10 col-lg-8 col-xl-10">
                         <div class="card vh-95 " style="border-radius: 1.5rem;">
@@ -36,6 +44,5 @@
     <footer>
         <script type="text/javascript" src="index.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap/mdb.min.js"></script>
-        <script type="text/javascript" src="services/red_flags_service.js"></script>
     </footer>
 </html>
