--- a/frontend/students/index.html
+++ b/frontend/students/index.html
@@ -12,6 +12,7 @@
         <!-- MDB -->
         <link href="./../assets/css/bootstrap/mdb.min.css" rel="stylesheet"/>
         <link rel="stylesheet" href="./../assets/css/style.css" type="text/css"></link>
+        <link rel="stylesheet" href="./../assets/css/lists.css" type="text/css"></link>
     </head>
     <body>
         <section class="vh-100">
@@ -31,17 +32,72 @@
                   <div class="card vh-95 " style="border-radius: 1.5rem;">
                     <div class="card-body p-5 text-left">
                         <h2 class="fw-bold text-uppercase font-primary">Alunos</h2>
+
+                        <div class="row">
+                          <div class="list list-row block">
+                              <div class="list-item" data-id="19">
+                                <div><a href="#" data-abc="true"><span class="w-48 avatar gd-warning">AS</span></a></div>
+                                <div class="flex">
+                                    <a href="#" class="item-author text-color" data-abc="true">Amanda Silva</a>
+                                    <div class="item-except text-muted text-sm h-1x">12 anos</div>
+                                </div>
+                                <div class="no-wrap">
+                                    <div class="item-date text-muted text-sm d-none d-md-block">13/12 18</div>
+                                </div>
+                              </div>
+                              <div class="list-item" data-id="7">
+                                <div><a href="#" data-abc="true"><span class="w-48 avatar gd-info">BO</span></a></div>
+                                <div class="flex">
+                                    <a href="#" class="item-author text-color" data-abc="true">Bianca Oliveira</a>
+                                    <div class="item-except text-muted text-sm h-1x">12 anos</div>
+                                </div>
+                                <div class="no-wrap">
+                                    <div class="item-date text-muted text-sm d-none d-md-block">21 July</div>
+                                </div>
+                              </div>
+                              <div class="list-item" data-id="17">
+                                <div><a href="#" data-abc="true"><span class="w-48 avatar gd-warning">CP</span></a></div>
+                                <div class="flex">
+                                    <a href="#" class="item-author text-color" data-abc="true">Caio Pereira</a>
+                                    <div class="item-except text-muted text-sm h-1x">10 anos</div>
+                                </div>
+                                <div class="no-wrap">
+                                    <div class="item-date text-muted text-sm d-none d-md-block">13/3/19</div>
+                                </div>
+                              </div>
+                              <div class="list-item" data-id="16">
+                                <div><a href="#" data-abc="true"><span class="w-48 avatar gd-info">DS</span></a></div>
+                                <div class="flex">
+                                    <a href="#" class="item-author text-color" data-abc="true">Diana Souza</a>
+                                    <div class="item-except text-muted text-sm h-1x">12 anos</div>
+                                </div>
+                                <div class="no-wrap">
+                                    <div class="item-date text-muted text-sm d-none d-md-block">03/1/19</div>
+                                </div>
+                              </div>
+                              <div class="list-item" data-id="4">
+                                <div><a href="#" data-abc="true"><span class="w-48 avatar gd-warning">GO</span></a></div>
+                                <div class="flex">
+                                    <a href="#" class="item-author text-color" data-abc="true">Gabriel Oliveira</a>
+                                    <div class="item-except text-muted text-sm h-1x">12 anos</div>
+                                </div>
+                                <div class="no-wrap">
+                                    <div class="item-date text-muted text-sm d-none d-md-block">2 hours ago</div>
+                                </div>
+                              </div>
+                          </div>
+                        </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-          </section>
+          </section>                                                                                    
     </body>
     <footer>
-        <script type="text/javascript" src="./../index.js"></script>
-        <!-- MDB -->
         <script type="text/javascript" src="./../assets/js/bootstrap/mdb.min.js"></script>
+        <script type="text/javascript" src="./../index.js"></script>
+        <script type="text/javascript" src="./../assets/js/students.js"></script>
         <script type="text/javascript" src="../services/student_service.js"></script>
     </footer>
 </html>
