--- a/frontend/school/red-flags/index.html
+++ b/frontend/school/red-flags/index.html
@@ -12,13 +12,14 @@
         <!-- MDB -->
         <link href="./../../assets/css/bootstrap/mdb.min.css" rel="stylesheet"/>
         <link rel="stylesheet" href="./../../assets/css/style.css" type="text/css"></link>
+        <link rel="stylesheet" href="./../../assets/css/lists.css" type="text/css"></link>
     </head>
     <body>
         <section class="vh-100">
             <div class="container vh-100 vw-100 mr-0">
                 <div class="row d-flex justify-content-center align-items-center h-100">
                     <div class="col-2 col-md-2 col-lg-4 col-xl-2 text-center">
-                        <img width="100%" src="./../../assets/img/logo.png">
+                        <a href="./"><img width="100%" src="./../../assets/img/logo.png"></a>
                         <img class="m-2" width="70%" src="./../../assets/img/user.png">
                         <p class="text-white mb-2">Coordenação</p>
                         <ul>
@@ -35,6 +36,61 @@
                             <div class="card-body p-5 text-left">
                                 <h2 class="fw-bold text-uppercase font-primary">Red Flags</h2>
                                 <p>Esses alunos devem ser encaminhados a um profissional especializado!</p>
+                                
+                        <div class="row">
+                            <div class="list list-row block">
+                                <div class="list-item" data-id="19">
+                                  <div><a href="#" data-abc="true"><span class="w-48 avatar gd-warning">AS</span></a></div>
+                                  <div class="flex">
+                                      <a href="#" class="item-author text-color" data-abc="true">Amanda Silva</a>
+                                      <div class="item-except text-muted text-sm h-1x">12 anos</div>
+                                  </div>
+                                  <div class="no-wrap">
+                                      <div class="item-date text-muted text-sm d-none d-md-block">13/12 18</div>
+                                  </div>
+                                </div>
+                                <div class="list-item" data-id="7">
+                                  <div><a href="#" data-abc="true"><span class="w-48 avatar gd-info">BO</span></a></div>
+                                  <div class="flex">
+                                      <a href="#" class="item-author text-color" data-abc="true">Bianca Oliveira</a>
+                                      <div class="item-except text-muted text-sm h-1x">12 anos</div>
+                                  </div>
+                                  <div class="no-wrap">
+                                      <div class="item-date text-muted text-sm d-none d-md-block">21 July</div>
+                                  </div>
+                                </div>
+                                <div class="list-item" data-id="17">
+                                  <div><a href="#" data-abc="true"><span class="w-48 avatar gd-warning">CP</span></a></div>
+                                  <div class="flex">
+                                      <a href="#" class="item-author text-color" data-abc="true">Caio Pereira</a>
+                                      <div class="item-except text-muted text-sm h-1x">10 anos</div>
+                                  </div>
+                                  <div class="no-wrap">
+                                      <div class="item-date text-muted text-sm d-none d-md-block">13/3/19</div>
+                                  </div>
+                                </div>
+                                <div class="list-item" data-id="16">
+                                  <div><a href="#" data-abc="true"><span class="w-48 avatar gd-info">DS</span></a></div>
+                                  <div class="flex">
+                                      <a href="#" class="item-author text-color" data-abc="true">Diana Souza</a>
+                                      <div class="item-except text-muted text-sm h-1x">12 anos</div>
+                                  </div>
+                                  <div class="no-wrap">
+                                      <div class="item-date text-muted text-sm d-none d-md-block">03/1/19</div>
+                                  </div>
+                                </div>
+                                <div class="list-item" data-id="4">
+                                  <div><a href="#" data-abc="true"><span class="w-48 avatar gd-warning">GO</span></a></div>
+                                  <div class="flex">
+                                      <a href="#" class="item-author text-color" data-abc="true">Gabriel Oliveira</a>
+                                      <div class="item-except text-muted text-sm h-1x">12 anos</div>
+                                  </div>
+                                  <div class="no-wrap">
+                                      <div class="item-date text-muted text-sm d-none d-md-block">2 hours ago</div>
+                                  </div>
+                                </div>
+                            </div>
+                          </div>
                             </div>
                         </div>
                     </div>
