--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,7 @@
             <div class="container vh-100 vw-100 mr-0">
                 <div class="row d-flex justify-content-center align-items-center h-100">
                     <div class="col-2 col-md-2 col-lg-4 col-xl-2 text-center">
-                        <a href="./"><img width="100%" src="assets/img/logo.png"></a>
+                        <a href="/"><img width="100%" src="assets/img/logo.png"></a>
                         <img class="m-2" width="70%" src="assets/img/user.png">
                         <p class="text-white mb-2">Coordenação</p>
                         <ul>
