estilo lista de usuários

--- a/frontend/school/red-flags/index.html
+++ b/frontend/school/red-flags/index.html
@@ -41,17 +41,17 @@
                             <div class="list list-row block">
                                 <div class="list-item" data-id="19">
                                   <div><a href="#" data-abc="true"><span class="w-48 avatar gd-warning">AS</span></a></div>
-                                  <div class="flex">
+                                  <div class="flex user-line" >
                                       <a href="#" class="item-author text-color" data-abc="true">Amanda Silva</a>
                                       <div class="item-except text-muted text-sm h-1x">12 anos</div>
                                   </div>
                                   <div class="no-wrap">
-                                      <div class="item-date text-muted text-sm d-none d-md-block">13/12 18</div>
+                                      <div class="item-date text-muted text-sm d-none d-md-block">ULTIMA AVALIAÇÃO 13/12 18</div>
                                   </div>
                                 </div>
                                 <div class="list-item" data-id="7">
                                   <div><a href="#" data-abc="true"><span class="w-48 avatar gd-info">BO</span></a></div>
-                                  <div class="flex">
+                                  <div class="flex user-line" >
                                       <a href="#" class="item-author text-color" data-abc="true">Bianca Oliveira</a>
                                       <div class="item-except text-muted text-sm h-1x">12 anos</div>
                                   </div>
@@ -61,7 +61,7 @@
                                 </div>
                                 <div class="list-item" data-id="17">
                                   <div><a href="#" data-abc="true"><span class="w-48 avatar gd-warning">CP</span></a></div>
-                                  <div class="flex">
+                                  <div class="flex user-line" >
                                       <a href="#" class="item-author text-color" data-abc="true">Caio Pereira</a>
                                       <div class="item-except text-muted text-sm h-1x">10 anos</div>
                                   </div>
@@ -71,7 +71,7 @@
                                 </div>
                                 <div class="list-item" data-id="16">
                                   <div><a href="#" data-abc="true"><span class="w-48 avatar gd-info">DS</span></a></div>
-                                  <div class="flex">
+                                  <div class="flex user-line" >
                                       <a href="#" class="item-author text-color" data-abc="true">Diana Souza</a>
                                       <div class="item-except text-muted text-sm h-1x">12 anos</div>
                                   </div>
@@ -81,7 +81,7 @@
                                 </div>
                                 <div class="list-item" data-id="4">
                                   <div><a href="#" data-abc="true"><span class="w-48 avatar gd-warning">GO</span></a></div>
-                                  <div class="flex">
+                                  <div class="flex user-line" >
                                       <a href="#" class="item-author text-color" data-abc="true">Gabriel Oliveira</a>
                                       <div class="item-except text-muted text-sm h-1x">12 anos</div>
                                   </div>
