--- a/frontend/school/red-flags/index.html
+++ b/frontend/school/red-flags/index.html
@@ -56,7 +56,7 @@
                                       <div class="item-except text-muted text-sm h-1x">12 anos</div>
                                   </div>
                                   <div class="no-wrap">
-                                      <div class="item-date text-muted text-sm d-none d-md-block">21 July</div>
+                                      <div class="item-date text-muted text-sm d-none d-md-block">ULTIMA AVALIAÇÃO 21 July</div>
                                   </div>
                                 </div>
                                 <div class="list-item" data-id="17">
@@ -66,7 +66,7 @@
                                       <div class="item-except text-muted text-sm h-1x">10 anos</div>
                                   </div>
                                   <div class="no-wrap">
-                                      <div class="item-date text-muted text-sm d-none d-md-block">13/3/19</div>
+                                      <div class="item-date text-muted text-sm d-none d-md-block">ULTIMA AVALIAÇÃO 13/3/19</div>
                                   </div>
                                 </div>
                                 <div class="list-item" data-id="16">
@@ -76,7 +76,7 @@
                                       <div class="item-except text-muted text-sm h-1x">12 anos</div>
                                   </div>
                                   <div class="no-wrap">
-                                      <div class="item-date text-muted text-sm d-none d-md-block">03/1/19</div>
+                                      <div class="item-date text-muted text-sm d-none d-md-block">ULTIMA AVALIAÇÃO 03/1/19</div>
                                   </div>
                                 </div>
                                 <div class="list-item" data-id="4">
@@ -86,7 +86,7 @@
                                       <div class="item-except text-muted text-sm h-1x">12 anos</div>
                                   </div>
                                   <div class="no-wrap">
-                                      <div class="item-date text-muted text-sm d-none d-md-block">2 hours ago</div>
+                                      <div class="item-date text-muted text-sm d-none d-md-block">ULTIMA AVALIAÇÃO 2 horas atrás</div>
                                   </div>
                                 </div>
                             </div>
