--- a/frontend/school/students/index.html
+++ b/frontend/school/students/index.html
@@ -101,6 +101,6 @@
         <script type="text/javascript" src="./../../index.js"></script>
         <!-- MDB -->
         <script type="text/javascript" src="./../../assets/js/bootstrap/mdb.min.js"></script>
-        <script type="text/javascript" src="../services/student_service.js"></script>
+        <script type="text/javascript" src="./services/student_service.js"></script>
     </footer>
 </html>
