--- a/frontend/school/red-flags/index.html
+++ b/frontend/school/red-flags/index.html
@@ -29,6 +29,9 @@
                           <li>
                             <a href="./../red-flags/" class="text-white">Red Flags</a>
                           </li>
+                          <li>
+                            <a onclick="logout()" href="javascript:void(0)" class="text-white">Sair</a>
+                          </li>
                         </ul>
                     </div>
                     <div class="col-10 col-md-10 col-lg-8 col-xl-10">
