--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,6 +28,9 @@
                           <li>
                             <a href="./school/red-flags/" class="text-white">Red Flags</a>
                           </li>
+                          <li>
+                            <a onclick="logout()" href="javascript:void(0)" class="text-white">Sair</a>
+                          </li>
                         </ul>
                     </div>
                     <div class="col-10 col-md-10 col-lg-8 col-xl-10">
